# merge-ip

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake-modules/: CMakeLists.txt  EnableCMocka.cmake  EnablePortableMath.cmake  EnableRegexFallback.cmake  OptimizeBuildFlags.cmake  StrictCompileFlags.cmake
src/: CMakeLists.txt  cli.c  cli.h  ipRange.c  ipRange.h  main.c  main.h  merge.c  merge.h  parse.c  parse.h  parser.c  parser.h  reader.c  reader.h
tests/: CMakeLists.txt  test_cli.c  test_main.c  test_merge.c
toolchains/: README.md
toolchains/openwrt/: Makefile  MediaTek-MT7621-v21.02.7.config  README.md  alpine.Dockerfile
